# weather-playlist-suggestion

./: .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  localenv  mypy.ini  pyproject.toml
wps/: exceptions.py  main.py  models.py  services.py  settings.py
wps/tests/: conftest.py  spotify_response.json  test_services.py
