[tool.poetry]
name = "wps"
version = "0.1.0"
description = ""
authors = ["Lucas Oishi <lucasoishi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.63.0"}
requests = "^2.25.1"
python-decouple = "^3.4"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.7.2"
black = "^20.8b1"
ipdb = "^0.13.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
